push 4, finished the content and the formatting, moving on to AJAX next

--- a/index.html
+++ b/index.html
@@ -23,13 +23,16 @@
 </head>
 
 <div class="bio">
+  <!-- bio section -->
+  <div class="bioimage"><img src="https://pbs.twimg.com/profile_images/1324860582353203201/Ztj3nFRd_400x400.jpg"></div>
   <h1>
     Bethany Hamilton
   </h1>
   <h2>
-    Bethany Hamilton was born in Lihue Kauai on February 8, 1990 to a family of surfers who had her on a board from a young age. After being attacked by a tiger shark and losing her arm, Bethany went on to become an accomplished surfer, winning national championships, writing a book which later was adapted into a movie, and advocating and inspiring those who have also lost or were born without apendages like arms or legs. 
+    Bethany Hamilton was born in Lihue Kauai on February 8, 1990 to a family of surfers who had her on a board from a young age. After being attacked by a tiger shark and losing her arm, Bethany went on to become an accomplished surfer, winning national championships,
+    writing a book which later was adapted into a movie, and advocating and inspiring those who have also lost or were born without apendages like arms or legs.
   </h2>
-  </div>
+</div>
 <div class="timeline">
   <!-- whole timeline -->
   <div class="line">
@@ -88,6 +91,7 @@
     </div>
   </div>
   <div class="container">
+            <div class="image"><img src="https://kbimages1-a.akamaihd.net/1a35d55b-e48b-4435-b4a2-4e703debceb1/1200/1200/False/soul-surfer-4.jpg"></div>
     <div class="content">
       <h2>
         Biography Released <span>2004</span>
@@ -97,12 +101,13 @@
     </div>
   </div>
   <div class="container">
-        <div class="image"><img src="https://mit.zenfs.com/137/2014/03/surfer.jpg"></div>
+    <div class="image"><img src="https://mit.zenfs.com/137/2014/03/surfer.jpg"></div>
     <div class="content">
       <h2>
         Wins the Women's Under 18 Surfing Championship <span>2005</span>
         <p>
-At age 15, Bethany receives her first national title as the NSSA Women’s Under 18 category champion and quickly comes into the spotlight with surfing companies, grocery stores, clothing manufacturers, and the entirety of the entertainment industry hoping to use her likeness to promote their brands. At just 15 years old, she already has immense pressure on her as a young celebrity for her feats in the competitive surfing world despite her disability.
+          At age 15, Bethany receives her first national title as the NSSA Women’s Under 18 category champion and quickly comes into the spotlight with surfing companies, grocery stores, clothing manufacturers, and the entirety of the entertainment industry hoping
+          to use her likeness to promote their brands. At just 15 years old, she already has immense pressure on her as a young celebrity for her feats in the competitive surfing world despite her disability.
         </p>
       </h2>
     </div>
@@ -110,44 +115,56 @@ At age 15, Bethany receives her first national title as the NSSA Women’s Under
   <div class="container">
     <div class="content">
       <h2>
-        Event 7 <span>date</span>
+        Tow Surfed "Jaws" <span>2009</span>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
-          in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        </p>
+          Tow surfing is a form of surfing that uses artificial help in order to surf faster and larger waves, as paddling by hand would make catching these waves almost impossible. The “Jaws Wave” is located in Peʻahi Hawaii and holds the record for the largest
+          wave surfed at 66 feet tall surfed by Makua Rothman. Bethany Hamilton tow surfed Jaws at age 19, her wave coming in at around 40 feet tall (roughly 8 times the height of the average person); this wave has since been one of the biggest of her
+          career and pushed her even further into the limelight. </p>
       </h2>
     </div>
   </div>
   <div class="container">
     <div class="content">
       <h2>
-        Event 8 <span>date</span>
+        Soul Surfer Movie Release <span>2011</span>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
-          in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+          In 2011, the movie “Soul Surfer” (based off of her biographical book) was released; produced by David Zelon, the movie grossed $47,158,652 worldwide and has an overall positive rating across the board, extending her story to even more people.
         </p>
+        <iframe width="100%" height="400" src="https://www.youtube.com/embed/MWeOjBCi3c4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+</iframe>
       </h2>
     </div>
   </div>
   <div class="container">
     <div class="content">
       <h2>
-        Event 9 <span>date</span>
+        The Return to Competitive Surfing <span>September 2015</span>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
-          in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+          Only 6 months after the birth of her son, Bethany returns to competitive surfing to continue to push her limits and win more awards and titles, continuing to inspire other women and those with disabilities as she takes the women’s surfing division further
+          than it ever has been.
         </p>
+      </h2>
+    </div>
+  </div>
+  <div class="container">
+        <div class="image"><img src="https://www.surfertoday.com/images/stories/cloudbreak-tavarua.jpg"></div>
+    <div class="content">
+      <h2>
+        Podium Places for Best Finish in a Championship Tour Contest <span>May 2016</span>
+        <p>
+          Competes at the Fiji Women’s Pro and places third after surfing the powerful wave “Cloudbreak.” Cloudbreak is a record holding wave in Tavarua Fiji that can get to 20 feet tall located directly over a dangerous coral reef; with high speeds, Cloudbreak
+          is widely considered one of the 10 deadliest waves in the world. </p>
       </h2>
     </div>
   </div>
   <div class="container">
     <div class="content">
       <h2>
-        Event 10 <span>date</span>
+        Unstoppable Documentary Release <span>2018</span>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
-          in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+In 2018, after her biographical movie, “Unstoppable” is released as a documentary and look into Hamilton’s life as a mother and surfer; the documentary focuses on faith, perseverance, and how to overcome the obstacles life throws at you, an inspirational but real look into the difficulties Bethany has had throughout her life.
         </p>
+         <iframe width="100%" height="400" src="https://www.youtube.com/embed/Y8-FrmSqUCM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </h2>
     </div>
   </div>
