--- a/content8.html
+++ b/content8.html
@@ -3,5 +3,5 @@
 <p id="content8">
   In 2011, the movie “Soul Surfer” (based off of her biographical book) was released; produced by David Zelon, the movie grossed $47,158,652 worldwide and has an overall positive rating across the board, extending her story to even more people.
 </p>
-<iframe id="video8" width="100%" height="400" src="https://www.youtube.com/embed/MWeOjBCi3c4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+<iframe class="video" id="video8" width="100%" height="400" src="https://www.youtube.com/embed/MWeOjBCi3c4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
 </iframe>
